Replace JCommander with picocli

--- a/src/main/resources/CommandLineBundle_es.properties
+++ b/src/main/resources/CommandLineBundle_es.properties
@@ -3,6 +3,7 @@
 # to convert a native language to ASCII
 distance=Distancia del recorrido, kil\u00f3metros o millas
 help=Mostrar este mensaje
+version=Mostrar versi\u00f3n
 price=Precio del combustible
 mileage.distance-per-volume=La eficiencia del combustible se expresa como la distancia recorrida por unidad de combustible consumido
 mileage.volume-per-distance=La eficiencia del combustible se expresa como la cantidad de combustible consumido por cada 100 unidades de distancia
@@ -12,3 +13,4 @@ round.four=Redondea a cuatro cifras
 round.three=Redondea a tres cifras
 round.two=Redondea a dos cifras
 round.zero=Redondea al n\u00famero entero m\u00e1s cercano
+value.non-positive=Debe ser un valor positivo, pero obtuve %s
