--- a/src/main/resources/CommandLineBundle_fr.properties
+++ b/src/main/resources/CommandLineBundle_fr.properties
@@ -3,6 +3,7 @@
 # to convert a native language to ASCII
 distance=Distance du trajet, en kilom\u00e8tres ou en miles
 help=Afficher ce message
+version=Afficher la version
 price=Prix du carburant
 mileage.distance-per-volume=Le rendement \u00e9nerg\u00e9tique est exprim\u00e9 en distance parcourue par unit\u00e9 de carburant consomm\u00e9e
 mileage.volume-per-distance=Le rendement \u00e9nerg\u00e9tique est exprim\u00e9 en quantit\u00e9 de carburant consomm\u00e9e pour 100 unit\u00e9s de distance
@@ -12,3 +13,4 @@ round.four=Arrondir \u00e0 quatre chiffres
 round.three=Arrondir \u00e0 trois chiffres
 round.two=Arrondir \u00e0 deux chiffres
 round.zero=Arrondir \u00e0 un nombre entier
+value.non-positive=Doit \u00eatre une valeur positive, mais a \u00e9t\u00e9 obtenue %s
