--- a/src/main/resources/CommandLineBundle_pl.properties
+++ b/src/main/resources/CommandLineBundle_pl.properties
@@ -3,6 +3,7 @@
 # to convert a native language to ASCII
 distance=Odleg\u0142o\u015b\u0107 przejazdu, kilometry lub mile
 help=Wy\u015bwietli\u0107 ten komunikat
+version=Wy\u015bwietli\u0107 wersj\u0119
 price=Cena paliwa
 mileage.distance-per-volume=Efektywno\u015b\u0107 paliwowa wyra\u017cana jest jako odleg\u0142o\u015b\u0107 przebyta na jednostk\u0119 zu\u017cytego paliwa
 mileage.volume-per-distance=Efektywno\u015b\u0107 paliwowa wyra\u017cana jest jako ilo\u015b\u0107 paliwa zu\u017cytego na 100 jednostek odleg\u0142o\u015bci
@@ -12,3 +13,4 @@ round.four=Zaokr\u0105glij do czterech cyfr
 round.three=Zaokr\u0105glij do trzech cyfr
 round.two=RZaokr\u0105gli\u0107 do dw\u00f3ch cyfr
 round.zero=Zaokr\u0105gli\u0107 do liczby ca\u0142kowitej
+value.non-positive=Musi to by\u0107 warto\u015b\u0107 dodatnia, ale otrzymano %s
