--- a/src/main/resources/CommandLineBundle_tr.properties
+++ b/src/main/resources/CommandLineBundle_tr.properties
@@ -3,6 +3,7 @@
 # to convert a native language to ASCII
 distance=S\u00fcr\u00fc\u015f mesafesi, kilometre veya mil
 help=Bu mesaj\u0131 g\u00f6ster
+version=S\u00fcr\u00fcm\u00fc g\u00f6ster
 price=Yak\u0131t fiyat\u0131
 mileage.distance-per-volume=Yak\u0131t verimlili\u011fi, t\u00fcketilen birim yak\u0131t ba\u015f\u0131na kat edilen mesafe olarak ifade edilir
 mileage.volume-per-distance=Yak\u0131t verimlili\u011fi, 100 birim mesafe ba\u015f\u0131na t\u00fcketilen yak\u0131t miktar\u0131 olarak ifade edilir
@@ -12,3 +13,4 @@ round.four=D\u00f6rt haneye yuvarla
 round.three=\u00dc\u00e7 haneye yuvarla
 round.two=\u0130ki haneye yuvarla
 round.zero=Tam say\u0131ya yuvarla
+value.non-positive=Pozitif bir de\u011fer olmal\u0131, ancak al\u0131nd\u0131 %s
