--- a/src/main/resources/CommandLineBundle_de.properties
+++ b/src/main/resources/CommandLineBundle_de.properties
@@ -3,6 +3,7 @@
 # to convert a native language to ASCII
 distance=Streckenl\u00e4nge in Kilometern oder Meilen
 help=Diese Nachricht anzeigen
+version=Version anzeigen
 price=Kraftstoffpreis
 mileage.distance-per-volume=Die Kraftstoffeffizienz wird als die zur\u00fcckgelegte Strecke pro verbrauchter Kraftstoffeinheit ausgedr\u00fcckt
 mileage.volume-per-distance=Die Kraftstoffeffizienz wird als die pro 100 Entfernungseinheiten verbrauchte Kraftstoffmenge angegeben
@@ -12,3 +13,4 @@ round.four=Auf vier Stellen runden
 round.three=Auf drei Stellen runden
 round.two=Auf zwei Stellen runden
 round.zero=Auf eine ganze Zahl runden
+value.non-positive=Muss ein positiver Wert sein, aber erhielt %s
