--- a/src/main/resources/CommandLineBundle_it.properties
+++ b/src/main/resources/CommandLineBundle_it.properties
@@ -3,6 +3,7 @@
 # to convert a native language to ASCII
 distance=Distanza del percorso, chilometri o miglia
 help=Mostra questo messaggio
+version=Mostra versione
 price=Prezzo del carburante
 mileage.distance-per-volume=L'efficienza del carburante \u00e8 espressa come la distanza percorsa per unit\u00e0 di carburante consumata
 mileage.volume-per-distance=L'efficienza del carburante \u00e8 espressa come la quantit\u00e0 di carburante consumata per 100 unit\u00e0 di distanza
@@ -12,3 +13,4 @@ round.four=Arrotondare a quattro cifre
 round.three=Arrotondare a tre cifre
 round.two=Arrotondare a due cifre
 round.zero=Arrotondare a un numero intero
+value.non-positive=Deve essere un valore positivo, ma ottenuto %s
