--- a/src/main/resources/CommandLineBundle_pt.properties
+++ b/src/main/resources/CommandLineBundle_pt.properties
@@ -3,6 +3,7 @@
 # to convert a native language to ASCII
 distance=Dist\u00e2ncia do percurso, em quil\u00f3metros ou milhas
 help=Mostrar esta mensagem
+version=SMostrar vers\u00e3o
 price=Pre\u00e7o do combust\u00edvel
 mileage.distance-per-volume=A efici\u00eancia do combust\u00edvel \u00e9 expressa como a dist\u00e2ncia percorrida por unidade de combust\u00edvel consumido
 mileage.volume-per-distance=A efici\u00eancia do combust\u00edvel \u00e9 expressa como a quantidade de combust\u00edvel consumida por 100 unidades de dist\u00e2ncia
@@ -12,3 +13,4 @@ round.four=Arredonde para quatro d\u00edgitos
 round.three=Arredonde para tr\u00eas d\u00edgitos
 round.two=Arredonde para dois d\u00edgitos
 round.zero=Arredonde para um n\u00famero inteiro
+value.non-positive=Deve ser um valor positivo, mas obtive %s
