--- a/src/main/resources/CommandLineBundle_ro.properties
+++ b/src/main/resources/CommandLineBundle_ro.properties
@@ -3,6 +3,7 @@
 # to convert a native language to ASCII
 distance=Distan\u021ba parcurs\u0103 \u00een kilometri sau mile
 help=Afi\u0219eaz\u0103 acest mesaj
+version=Afi\u0219a\u021bi versiunea
 price=Pre\u021bul combustibilului
 mileage.distance-per-volume=Eficien\u021ba consumului de combustibil este exprimat\u0103 ca distan\u021ba parcurs\u0103 pe unitatea de combustibil consumat\u0103
 mileage.volume-per-distance=Eficien\u021ba consumului de combustibil este exprimat\u0103 ca cantitatea de combustibil consumat\u0103 la 100 de unit\u0103\u021bi de distan\u021b\u0103 parcurs\u0103
@@ -12,3 +13,4 @@ round.four=Rotunje\u0219te la patru cifre
 round.three=Rotunje\u0219te la trei cifre
 round.two=Rotunje\u0219te la dou\u0103 cifre
 round.zero=Rotunje\u0219te la un num\u0103r \u00eentreg
+value.non-positive=Trebuie s\u0103 fie o valoare pozitiv\u0103, dar am ob\u021binut %s
