Add German translation

--- a/src/main/resources/CommandLineBundle_de.properties
+++ b/src/main/resources/CommandLineBundle_de.properties
@@ -1,16 +1,35 @@
 # You could use https://native2ascii.net/
 # or https://www.freecodeformat.com/native-asc.php
 # to convert a native language to ASCII
-distance=Streckenl\u00e4nge in Kilometern oder Meilen
-help=Diese Nachricht anzeigen
-version=Version anzeigen
-price=Kraftstoffpreis
-mileage.distance-per-volume=Die Kraftstoffeffizienz wird als die zur\u00fcckgelegte Strecke pro verbrauchter Kraftstoffeinheit ausgedr\u00fcckt
-mileage.volume-per-distance=Die Kraftstoffeffizienz wird als die pro 100 Entfernungseinheiten verbrauchte Kraftstoffmenge angegeben
-exclusive.two-mileages-simultaneously=Kraftstoffeffizienz gemessen an der zur\u00fcckgelegten Strecke oder am Kraftstoffverbrauch schlie\u00dfen sich gegenseitig aus
-required.any-mileage=Der Kraftstoffverbrauch muss angegeben werden
-round.four=Auf vier Stellen runden
-round.three=Auf drei Stellen runden
-round.two=Auf zwei Stellen runden
-round.zero=Auf eine ganze Zahl runden
-value.non-positive=Muss ein positiver Wert sein, aber erhielt %s
+#
+# Parameters and options
+distance = Entfernung der Fahrt, in Kilometern oder Meilen
+price = Kraftstoffpreis
+mileage.distance-per-volume = Kraftstoffeffizienz, Strecke pro Kraftstoffeinheit
+mileage.volume-per-distance = Kraftstoffverbrauch pro 100 Einheiten der Entfernung
+round.four = Auf vier Stellen runden
+round.three = Auf drei Stellen runden
+round.two = Auf zwei Stellen runden
+round.zero = Auf ganze Zahl runden
+state.save = Preis, Kraftstoffeffizienz und Rundung f\u00fcr die zuk\u00fcnftige Nutzung speichern
+# Validation
+value.non-positive = Der Wert muss positiv sein, aber erhalten %s
+exclusive.two-mileages-simultaneously = Kraftstoffeffizienz nach Strecke und Kraftstoffverbrauch schlie\u00dfen sich gegenseitig aus
+required.any-mileage = Kraftstoffeffizienz muss angegeben werden
+required.distance = Entfernung muss angegeben werden
+required.price = Preis muss angegeben werden
+# Help and version
+help = Diese Meldung anzeigen
+version = Version anzeigen
+# Usage
+# Leading whitespace is removed by default.
+# Start with \u0020 to keep the leading whitespace.
+usage.header = Berechnung der Fahrtkosten anhand der zur\u00fcckgelegten Strecke.%n
+#usage.descriptionHeading
+usage.description = Berechnet die gesch\u00e4tzten Fahrtkosten basierend auf der Kraftstoffeffizienz, dem Kraftstoffpreis und der Entfernung der Fahrt.%n
+usage.description.0 = Sie k\u00f6nnen Preis und Kraftstoffeffizienz f\u00fcr die zuk\u00fcnftige Nutzung speichern.%n
+usage.synopsisHeading = Verwendung:%n\u0020
+#usage.customSynopsis
+usage.parameterListHeading = Parameter:%n
+usage.optionListHeading = %Optionen:%n
+#usage.footer
