Add Spanish translation

--- a/src/main/resources/CommandLineBundle_es.properties
+++ b/src/main/resources/CommandLineBundle_es.properties
@@ -1,16 +1,35 @@
 # You could use https://native2ascii.net/
 # or https://www.freecodeformat.com/native-asc.php
 # to convert a native language to ASCII
-distance=Distancia del recorrido, kil\u00f3metros o millas
-help=Mostrar este mensaje
-version=Mostrar versi\u00f3n
-price=Precio del combustible
-mileage.distance-per-volume=La eficiencia del combustible se expresa como la distancia recorrida por unidad de combustible consumido
-mileage.volume-per-distance=La eficiencia del combustible se expresa como la cantidad de combustible consumido por cada 100 unidades de distancia
-exclusive.two-mileages-simultaneously=La eficiencia de combustible medida por distancia o el consumo de combustible son mutuamente excluyentes
-required.any-mileage=Debe especificarse la eficiencia del combustible
-round.four=Redondea a cuatro cifras
-round.three=Redondea a tres cifras
-round.two=Redondea a dos cifras
-round.zero=Redondea al n\u00famero entero m\u00e1s cercano
-value.non-positive=Debe ser un valor positivo, pero obtuve %s
+#
+# Parameters and options
+distance = Distancia del viaje, en kil\u00f3metros o millas
+price = Precio del combustible
+mileage.distance-per-volume = Eficiencia de combustible, recorrido por unidad de combustible
+mileage.volume-per-distance = Consumo de combustible por cada 100 unidades de distancia
+round.four = Redondear a cuatro cifras
+round.three = Redondear a tres cifras
+round.two = Redondear a dos cifras
+round.zero = Redondear al n\u00famero entero
+state.save = Guardar el precio, la eficiencia de combustible y la configuraci\u00f3n de redondeo para su uso futuro
+# Validation
+value.non-positive = El valor debe ser positivo, pero se ha recibido un valor %s
+exclusive.two-mileages-simultaneously = La eficiencia de combustible por recorrido y el consumo de combustible son mutuamente excluyentes
+required.any-mileage = Se debe especificar la eficiencia de combustible
+required.distance = Se debe especificar la distancia
+required.price = Se debe especificar el precio
+# Help and version
+help = Mostrar este mensaje
+version = Mostrar la versi\u00f3n
+# Usage
+# Leading whitespace is removed by default.
+# Start with \u0020 to keep the leading whitespace.
+usage.header = C\u00e1lculo del costo del viaje seg\u00fan el recorrido.%n
+#usage.descriptionHeading
+usage.description = Calcula el costo estimado del viaje bas\u00e1ndose en la eficiencia de combustible, el precio del combustible y la distancia del viaje.%n
+usage.description.0 = Puede guardar el precio del combustible y la eficiencia de combustible para su uso futuro.%n
+usage.synopsisHeading = Uso:%n\u0020
+#usage.customSynopsis
+usage.parameterListHeading = Par\u00e1metros:%n
+usage.optionListHeading = %Opciones:%n
+#usage.footer
