Add Romanian translation

--- a/src/main/resources/CommandLineBundle_de.properties
+++ b/src/main/resources/CommandLineBundle_de.properties
@@ -31,5 +31,5 @@ usage.description.0 = Sie k\u00f6nnen Preis und Kraftstoffeffizienz f\u00fcr die
 usage.synopsisHeading = Verwendung:%n\u0020
 #usage.customSynopsis
 usage.parameterListHeading = Parameter:%n
-usage.optionListHeading = %Optionen:%n
+usage.optionListHeading = %nOptionen:%n
 #usage.footer
