--- a/src/main/resources/CommandLineBundle_es.properties
+++ b/src/main/resources/CommandLineBundle_es.properties
@@ -31,5 +31,5 @@ usage.description.0 = Puede guardar el precio del combustible y la eficiencia de
 usage.synopsisHeading = Uso:%n\u0020
 #usage.customSynopsis
 usage.parameterListHeading = Par\u00e1metros:%n
-usage.optionListHeading = %Opciones:%n
+usage.optionListHeading = %nOpciones:%n
 #usage.footer
