--- a/src/main/resources/CommandLineBundle_fr.properties
+++ b/src/main/resources/CommandLineBundle_fr.properties
@@ -31,5 +31,5 @@ usage.description.0 = Vous pouvez enregistrer les donn\u00e9es de co\u00fbt et d
 usage.synopsisHeading = Utilisation:%n\u0020
 #usage.customSynopsis
 usage.parameterListHeading = Param\u00e8tres:%n
-usage.optionListHeading = %Options:%n
+usage.optionListHeading = %nOptions:%n
 #usage.footer
