--- a/src/main/resources/CommandLineBundle_it.properties
+++ b/src/main/resources/CommandLineBundle_it.properties
@@ -31,5 +31,5 @@ usage.description.0 = \u00c8 possibile salvare i dati di costo e di efficienza d
 usage.synopsisHeading = Utilizzo:%n\u0020
 #usage.customSynopsis
 usage.parameterListHeading = Parametri:%n
-usage.optionListHeading = %Opzioni:%n
+usage.optionListHeading = %nOpzioni:%n
 #usage.footer
