--- a/src/main/resources/CommandLineBundle_pl.properties
+++ b/src/main/resources/CommandLineBundle_pl.properties
@@ -31,5 +31,5 @@ usage.description.0 = Mo\u017cesz zapisa\u0107 cen\u0119 paliwa i ekonomiczno\u0
 usage.synopsisHeading = U\u017cycie:%n\u0020
 #usage.customSynopsis
 usage.parameterListHeading = Parametry:%n
-usage.optionListHeading = %Opcje:%n
+usage.optionListHeading = %nOpcje:%n
 #usage.footer
