--- a/src/main/resources/CommandLineBundle_pt.properties
+++ b/src/main/resources/CommandLineBundle_pt.properties
@@ -31,5 +31,5 @@ usage.description.0 = Pode guardar os dados de custo e de efici\u00eancia do com
 usage.synopsisHeading = Utiliza\u00e7\u00e3o:%n\u0020
 #usage.customSynopsis
 usage.parameterListHeading = Par\u00e2metros:%n
-usage.optionListHeading = %Op\u00e7\u00f5es:%n
+usage.optionListHeading = %nOp\u00e7\u00f5es:%n
 #usage.footer
