--- a/src/main/resources/CommandLineBundle_pt_BR.properties
+++ b/src/main/resources/CommandLineBundle_pt_BR.properties
@@ -31,5 +31,5 @@ usage.description.0 = Voc\u00ea pode salvar os dados de custo e efici\u00eancia 
 usage.synopsisHeading = Uso:%n\u0020
 #usage.customSynopsis
 usage.parameterListHeading = Par\u00e2metros:%n
-usage.optionListHeading = %Op\u00e7\u00f5es:%n
+usage.optionListHeading = %nOp\u00e7\u00f5es:%n
 #usage.footer
