--- a/src/main/resources/CommandLineBundle_ro.properties
+++ b/src/main/resources/CommandLineBundle_ro.properties
@@ -1,16 +1,35 @@
 # You could use https://native2ascii.net/
 # or https://www.freecodeformat.com/native-asc.php
 # to convert a native language to ASCII
-distance=Distan\u021ba parcurs\u0103 \u00een kilometri sau mile
-help=Afi\u0219eaz\u0103 acest mesaj
-version=Afi\u0219a\u021bi versiunea
-price=Pre\u021bul combustibilului
-mileage.distance-per-volume=Eficien\u021ba consumului de combustibil este exprimat\u0103 ca distan\u021ba parcurs\u0103 pe unitatea de combustibil consumat\u0103
-mileage.volume-per-distance=Eficien\u021ba consumului de combustibil este exprimat\u0103 ca cantitatea de combustibil consumat\u0103 la 100 de unit\u0103\u021bi de distan\u021b\u0103 parcurs\u0103
-exclusive.two-mileages-simultaneously=Eficien\u021ba consumului de combustibil \u00een func\u021bie de distan\u021b\u0103 sau consumul de combustibil se exclud reciproc
-required.any-mileage=Eficien\u021ba consumului de combustibil trebuie specificat\u0103
-round.four=Rotunje\u0219te la patru cifre
-round.three=Rotunje\u0219te la trei cifre
-round.two=Rotunje\u0219te la dou\u0103 cifre
-round.zero=Rotunje\u0219te la un num\u0103r \u00eentreg
-value.non-positive=Trebuie s\u0103 fie o valoare pozitiv\u0103, dar am ob\u021binut %s
+#
+# Parameters and options
+distance = Distan\u021ba c\u0103l\u0103toriei, \u00een kilometri sau mile
+price = Pre\u021bul combustibilului
+mileage.distance-per-volume = Eficien\u021ba combustibilului, distan\u021ba parcurs\u0103 pe unitate de combustibil
+mileage.volume-per-distance = Consumul de combustibil la 100 de unit\u0103\u021bi de distan\u021b\u0103
+round.four = Rotunje\u0219te la patru cifre
+round.three = Rotunje\u0219te la trei cifre
+round.two = Rotunje\u0219te la dou\u0103 cifre
+round.zero = Rotunje\u0219te la num\u0103r \u00eentreg
+state.save = Salveaz\u0103 pre\u021bul, eficien\u021ba combustibilului \u0219i op\u021biunile de rotunjire pentru utilizare viitoare
+# Validation
+value.non-positive = Valoarea trebuie s\u0103 fie pozitiv\u0103, dar a fost furnizat\u0103 o valoare %s
+exclusive.two-mileages-simultaneously = Eficien\u021ba pe distan\u021b\u0103 parcurs\u0103 \u0219i consumul de combustibil se exclud reciproc
+required.any-mileage = Este necesar s\u0103 specifica\u021bi eficien\u021ba combustibilului
+required.distance = Este necesar s\u0103 specifica\u021bi distan\u021ba
+required.price = Este necesar s\u0103 specifica\u021bi pre\u021bul
+# Help and version
+help = Afi\u0219eaz\u0103 acest mesaj
+version = Afi\u0219eaz\u0103 versiunea
+# Usage
+# Leading whitespace is removed by default.
+# Start with \u0020 to keep the leading whitespace.
+usage.header = Determinarea costului c\u0103l\u0103toriei pe baza eficien\u021bei combustibilului.%n
+#usage.descriptionHeading
+usage.description = Calculeaz\u0103 costul estimat al c\u0103l\u0103toriei pe baza eficien\u021bei combustibilului, a pre\u021bului combustibilului \u0219i a distan\u021bei c\u0103l\u0103toriei.%n
+usage.description.0 = Pute\u021bi salva datele privind costul \u0219i eficien\u021ba combustibilului pentru utilizare viitoare.%n
+usage.synopsisHeading = Utilizare:%n\u0020
+#usage.customSynopsis
+usage.parameterListHeading = Parametri:%n
+usage.optionListHeading = %nOp\u021biuni:%n
+#usage.footer
