Add Turkish translation

--- a/src/main/resources/CommandLineBundle_tr.properties
+++ b/src/main/resources/CommandLineBundle_tr.properties
@@ -1,16 +1,35 @@
 # You could use https://native2ascii.net/
 # or https://www.freecodeformat.com/native-asc.php
 # to convert a native language to ASCII
-distance=S\u00fcr\u00fc\u015f mesafesi, kilometre veya mil
-help=Bu mesaj\u0131 g\u00f6ster
-version=S\u00fcr\u00fcm\u00fc g\u00f6ster
-price=Yak\u0131t fiyat\u0131
-mileage.distance-per-volume=Yak\u0131t verimlili\u011fi, t\u00fcketilen birim yak\u0131t ba\u015f\u0131na kat edilen mesafe olarak ifade edilir
-mileage.volume-per-distance=Yak\u0131t verimlili\u011fi, 100 birim mesafe ba\u015f\u0131na t\u00fcketilen yak\u0131t miktar\u0131 olarak ifade edilir
-exclusive.two-mileages-simultaneously=Mesafeye g\u00f6re yak\u0131t verimlili\u011fi veya yak\u0131t t\u00fcketimi birbirini d\u0131\u015flayan kavramlard\u0131r
-required.any-mileage=Yak\u0131t verimlili\u011fi belirtilmelidir
-round.four=D\u00f6rt haneye yuvarla
-round.three=\u00dc\u00e7 haneye yuvarla
-round.two=\u0130ki haneye yuvarla
-round.zero=Tam say\u0131ya yuvarla
-value.non-positive=Pozitif bir de\u011fer olmal\u0131, ancak al\u0131nd\u0131 %s
+#
+# Parameters and options
+distance = Seyahat mesafesi, kilometre veya mil
+price = Yak\u0131t fiyat\u0131
+mileage.distance-per-volume = Yak\u0131t verimlili\u011fi, bir birim yak\u0131tla al\u0131nan mesafe
+mileage.volume-per-distance = Yak\u0131t verimlili\u011fi, 100 birim mesafe ba\u015f\u0131na yak\u0131t t\u00fcketimi
+round.four = D\u00f6rt basama\u011fa yuvarla
+round.three = \u00dc\u00e7 basama\u011fa yuvarla.
+round.two = \u0130ki basama\u011fa yuvarla
+round.zero = Tam say\u0131ya yuvarla
+state.save = Yak\u0131t fiyat\u0131n\u0131, yak\u0131t verimlili\u011fini ve yuvarlama ayarlar\u0131n\u0131 gelecekteki kullan\u0131m i\u00e7in kaydet
+# Validation
+value.non-positive = Pozitif bir de\u011fer olmal\u0131d\u0131r, ancak al\u0131nan de\u011fer %s
+exclusive.two-mileages-simultaneously = Mesafe bazl\u0131 ve t\u00fcketim bazl\u0131 yak\u0131t verimlili\u011fi se\u00e7enekleri birbirini d\u0131\u015flar
+required.any-mileage = Yak\u0131t verimlili\u011fi belirtilmelidir
+required.distance = Mesafe belirtilmelidir
+required.price = Fiyat belirtilmelidir
+# Help and version
+help = Bu mesaj\u0131 g\u00f6ster
+version = S\u00fcr\u00fcm\u00fc g\u00f6ster
+# Usage
+# Leading whitespace is removed by default.
+# Start with \u0020 to keep the leading whitespace.
+usage.header = Mesafeye g\u00f6re seyahat maliyetinin hesaplanmas\u0131.%n
+#usage.descriptionHeading
+usage.description = Yak\u0131t verimlili\u011fi, yak\u0131t fiyat\u0131 ve seyahat mesafesine dayanarak tahmini seyahat maliyetini hesaplar.%n
+usage.description.0 = Gelecekte kullanmak \u00fczere maliyet ve yak\u0131t verimlili\u011fi bilgilerini kaydedebilirsiniz.%n
+usage.synopsisHeading = Kullan\u0131m:%n\u0020
+#usage.customSynopsis
+usage.parameterListHeading = Parametreler:%n
+usage.optionListHeading = %nSe\u00e7enekler:%n
+#usage.footer
