--- a/src/main/resources/CommandLineBundle_fr.properties
+++ b/src/main/resources/CommandLineBundle_fr.properties
@@ -1,16 +1,35 @@
 # You could use https://native2ascii.net/
 # or https://www.freecodeformat.com/native-asc.php
 # to convert a native language to ASCII
-distance=Distance du trajet, en kilom\u00e8tres ou en miles
-help=Afficher ce message
-version=Afficher la version
-price=Prix du carburant
-mileage.distance-per-volume=Le rendement \u00e9nerg\u00e9tique est exprim\u00e9 en distance parcourue par unit\u00e9 de carburant consomm\u00e9e
-mileage.volume-per-distance=Le rendement \u00e9nerg\u00e9tique est exprim\u00e9 en quantit\u00e9 de carburant consomm\u00e9e pour 100 unit\u00e9s de distance
-exclusive.two-mileages-simultaneously=L'efficacit\u00e9 \u00e9nerg\u00e9tique en fonction de la distance parcourue et la consommation de carburant sont des notions qui s'excluent mutuellement
-required.any-mileage=Le rendement \u00e9nerg\u00e9tique doit \u00eatre sp\u00e9cifi\u00e9
-round.four=Arrondir \u00e0 quatre chiffres
-round.three=Arrondir \u00e0 trois chiffres
-round.two=Arrondir \u00e0 deux chiffres
-round.zero=Arrondir \u00e0 un nombre entier
-value.non-positive=Doit \u00eatre une valeur positive, mais a \u00e9t\u00e9 obtenue %s
+#
+# Parameters and options
+distance = Distance du trajet, en kilom\u00e8tres ou en miles
+price = Prix du carburant
+mileage.distance-per-volume = Efficacit\u00e9 \u00e9nerg\u00e9tique, distance parcourue par unit\u00e9 de carburant
+mileage.volume-per-distance = Consommation de carburant par 100 unit\u00e9s de distance
+round.four = Arrondir \u00e0 quatre chiffres
+round.three = Arrondir \u00e0 trois chiffres
+round.two = Arrondir \u00e0 deux chiffres
+round.zero = Arrondir \u00e0 l\u2019unit\u00e9
+state.save = Enregistrer le prix, l\u2019efficacit\u00e9 \u00e9nerg\u00e9tique et les param\u00e8tres d\u2019arrondi pour une utilisation future
+# Validation
+value.non-positive = La valeur doit \u00eatre positive, mais une valeur %s
+exclusive.two-mileages-simultaneously = L\u2019efficacit\u00e9 \u00e9nerg\u00e9tique bas\u00e9e sur le parcours ou la consommation de carburant sont mutuellement exclusives
+required.any-mileage = L\u2019efficacit\u00e9 \u00e9nerg\u00e9tique doit \u00eatre sp\u00e9cifi\u00e9e
+required.distance = La distance doit \u00eatre sp\u00e9cifi\u00e9e
+required.price = Le prix doit \u00eatre sp\u00e9cifi\u00e9
+# Help and version
+help = Afficher ce message
+version = Afficher la version
+# Usage
+# Leading whitespace is removed by default.
+# Start with \u0020 to keep the leading whitespace.
+usage.header = D\u00e9terminer le co\u00fbt du trajet en fonction de l\u2019efficacit\u00e9 \u00e9nerg\u00e9tique.%n
+#usage.descriptionHeading
+usage.description = Calcule le co\u00fbt estim\u00e9 du trajet sur la base de l\u2019efficacit\u00e9 \u00e9nerg\u00e9tique, du prix du carburant et de la distance du voyage.%n
+usage.description.0 = Vous pouvez enregistrer les donn\u00e9es de co\u00fbt et d\u2019efficacit\u00e9 \u00e9nerg\u00e9tique pour une utilisation future.%n
+usage.synopsisHeading = Utilisation:%n\u0020
+#usage.customSynopsis
+usage.parameterListHeading = Param\u00e8tres:%n
+usage.optionListHeading = %nOptions:%n
+#usage.footer
