--- a/src/main/resources/CommandLineBundle_it.properties
+++ b/src/main/resources/CommandLineBundle_it.properties
@@ -1,16 +1,35 @@
 # You could use https://native2ascii.net/
 # or https://www.freecodeformat.com/native-asc.php
 # to convert a native language to ASCII
-distance=Distanza del percorso, chilometri o miglia
-help=Mostra questo messaggio
-version=Mostra versione
-price=Prezzo del carburante
-mileage.distance-per-volume=L'efficienza del carburante \u00e8 espressa come la distanza percorsa per unit\u00e0 di carburante consumata
-mileage.volume-per-distance=L'efficienza del carburante \u00e8 espressa come la quantit\u00e0 di carburante consumata per 100 unit\u00e0 di distanza
-exclusive.two-mileages-simultaneously=L'efficienza del carburante in base alla distanza o al consumo di carburante si escludono a vicenda
-required.any-mileage=L'efficienza del carburante deve essere specificata
-round.four=Arrotondare a quattro cifre
-round.three=Arrotondare a tre cifre
-round.two=Arrotondare a due cifre
-round.zero=Arrotondare a un numero intero
-value.non-positive=Deve essere un valore positivo, ma ottenuto %s
+#
+# Parameters and options
+distance = Distanza del viaggio, in chilometri o miglia
+price = Prezzo del carburante
+mileage.distance-per-volume = Efficienza del carburante, distanza percorsa per unit\u00e0 di carburante
+mileage.volume-per-distance = Consumo di carburante per 100 unit\u00e0 di distanza
+round.four = Arrotondare a quattro cifre
+round.three = Arrotondare a tre cifre
+round.two = Arrotondare a due cifre
+round.zero = Arrotondare all\u2019unit\u00e0
+state.save = Salvare il prezzo, l\u2019efficienza del carburante e le impostazioni di arrotondamento per un uso futuro
+# Validation
+value.non-positive = Il valore deve essere positivo, ma \u00e8 stato fornito un valore %s
+exclusive.two-mileages-simultaneously = L\u2019efficienza basata sulla distanza percorsa o sul consumo di carburante sono mutuamente esclusive
+required.any-mileage = \u00c8 necessario specificare l\u2019efficienza del carburante
+required.distance = \u00c8 necessario specificare la distanza
+required.price = \u00c8 necessario specificare il prezzo
+# Help and version
+help = Mostrare questo messaggio
+version = Mostrare la versione
+# Usage
+# Leading whitespace is removed by default.
+# Start with \u0020 to keep the leading whitespace.
+usage.header = Determinare il costo del viaggio in base all\u2019efficienza del carburante.%n
+#usage.descriptionHeading
+usage.description = Calcola il costo stimato del viaggio in base all\u2019efficienza del carburante, al prezzo del carburante e alla distanza del percorso.%n
+usage.description.0 = \u00c8 possibile salvare i dati di costo e di efficienza del carburante per un uso futuro.%n
+usage.synopsisHeading = Utilizzo:%n\u0020
+#usage.customSynopsis
+usage.parameterListHeading = Parametri:%n
+usage.optionListHeading = %nOpzioni:%n
+#usage.footer
