--- a/src/main/resources/CommandLineBundle_pl.properties
+++ b/src/main/resources/CommandLineBundle_pl.properties
@@ -1,16 +1,35 @@
 # You could use https://native2ascii.net/
 # or https://www.freecodeformat.com/native-asc.php
 # to convert a native language to ASCII
-distance=Odleg\u0142o\u015b\u0107 przejazdu, kilometry lub mile
-help=Wy\u015bwietli\u0107 ten komunikat
-version=Wy\u015bwietli\u0107 wersj\u0119
-price=Cena paliwa
-mileage.distance-per-volume=Efektywno\u015b\u0107 paliwowa wyra\u017cana jest jako odleg\u0142o\u015b\u0107 przebyta na jednostk\u0119 zu\u017cytego paliwa
-mileage.volume-per-distance=Efektywno\u015b\u0107 paliwowa wyra\u017cana jest jako ilo\u015b\u0107 paliwa zu\u017cytego na 100 jednostek odleg\u0142o\u015bci
-exclusive.two-mileages-simultaneously=Efektywno\u015b\u0107 paliwowa w zale\u017cno\u015bci od odleg\u0142o\u015bci lub zu\u017cycia paliwa wzajemnie si\u0119 wykluczaj\u0105
-required.any-mileage=Nale\u017cy okre\u015bli\u0107 efektywno\u015b\u0107 paliwow\u0105
-round.four=Zaokr\u0105glij do czterech cyfr
-round.three=Zaokr\u0105glij do trzech cyfr
-round.two=RZaokr\u0105gli\u0107 do dw\u00f3ch cyfr
-round.zero=Zaokr\u0105gli\u0107 do liczby ca\u0142kowitej
-value.non-positive=Musi to by\u0107 warto\u015b\u0107 dodatnia, ale otrzymano %s
+#
+# Parameters and options
+distance = Odleg\u0142o\u015b\u0107 przejazdu, w kilometrach lub milach
+price = Cena paliwa
+mileage.distance-per-volume = Ekonomiczno\u015b\u0107 paliwa, przebieg na jednostk\u0119 paliwa
+mileage.volume-per-distance = Zu\u017cycie paliwa na 100 jednostek odleg\u0142o\u015bci
+round.four = Zaokr\u0105gli\u0107 do czterech cyfr
+round.three = Zaokr\u0105gli\u0107 do trzech cyfr
+round.two = Zaokr\u0105gli\u0107 do dw\u00f3ch cyfr
+round.zero = Zaokr\u0105gli\u0107 do liczby ca\u0142kowitej
+state.save = Zapisz cen\u0119, ekonomiczno\u015b\u0107 paliwa i ustawienia zaokr\u0105glania do przysz\u0142ego u\u017cycia
+# Validation
+value.non-positive = Warto\u015b\u0107 musi by\u0107 dodatnia, ale otrzymano %s
+exclusive.two-mileages-simultaneously = Ekonomiczno\u015b\u0107 paliwa wed\u0142ug przebiegu i zu\u017cycia paliwa s\u0105 wzajemnie wykluczaj\u0105ce si\u0119
+required.any-mileage = Nale\u017cy poda\u0107 ekonomiczno\u015b\u0107 paliwa
+required.distance = Nale\u017cy poda\u0107 odleg\u0142o\u015b\u0107
+required.price = Nale\u017cy poda\u0107 cen\u0119
+# Help and version
+help = Poka\u017c t\u0119 wiadomo\u015b\u0107
+version = Poka\u017c wersj\u0119
+# Usage
+# Leading whitespace is removed by default.
+# Start with \u0020 to keep the leading whitespace.
+usage.header = Obliczanie kosztu przejazdu na podstawie przebiegu.%n
+#usage.descriptionHeading
+usage.description = Oblicza orientacyjny koszt przejazdu na podstawie ekonomiczno\u015bci paliwa, ceny paliwa i odleg\u0142o\u015bci przejazdu.%n
+usage.description.0 = Mo\u017cesz zapisa\u0107 cen\u0119 paliwa i ekonomiczno\u015b\u0107 paliwa do przysz\u0142ego u\u017cycia.%n
+usage.synopsisHeading = U\u017cycie:%n\u0020
+#usage.customSynopsis
+usage.parameterListHeading = Parametry:%n
+usage.optionListHeading = %nOpcje:%n
+#usage.footer
