--- a/src/main/resources/CommandLineBundle_pt_BR.properties
+++ b/src/main/resources/CommandLineBundle_pt_BR.properties
@@ -3,32 +3,32 @@
 # to convert a native language to ASCII
 #
 # Parameters and options
-distance = Dist\u00e2ncia da viagem, em quil\u00f3metros ou milhas
+distance = Dist\u00e2ncia da viagem, em quil\u00f4metros ou milhas
 price = Pre\u00e7o do combust\u00edvel
 mileage.distance-per-volume = Efici\u00eancia do combust\u00edvel, dist\u00e2ncia percorrida por unidade de combust\u00edvel
 mileage.volume-per-distance = Consumo de combust\u00edvel por 100 unidades de dist\u00e2ncia
-round.four = Arredondar para quatro algarismos
-round.three = Arredondar para tr\u00eas algarismos
-round.two = Arredondar para dois algarismos
+round.four = Arredondar para quatro d\u00edgitos
+round.three = Arredondar para tr\u00eas d\u00edgitos
+round.two = Arredondar para dois d\u00edgitos
 round.zero = Arredondar para o inteiro
-state.save = Guardar o pre\u00e7o, a efici\u00eancia do combust\u00edvel e as op\u00e7\u00f5es de arredondamento para utiliza\u00e7\u00e3o futura
+state.save = Salvar o pre\u00e7o, a efici\u00eancia do combust\u00edvel e as op\u00e7\u00f5es de arredondamento para uso futuro
 # Validation
 value.non-positive = O valor deve ser positivo, mas foi fornecido um valor %s
 exclusive.two-mileages-simultaneously = A efici\u00eancia baseada na dist\u00e2ncia percorrida ou no consumo de combust\u00edvel \u00e9 mutuamente exclusiva
-required.any-mileage = \u00c9 necess\u00e1rio indicar a efici\u00eancia do combust\u00edvel
-required.distance = \u00c9 necess\u00e1rio indicar a dist\u00e2ncia
-required.price = \u00c9 necess\u00e1rio indicar o pre\u00e7o
+required.any-mileage = \u00c9 necess\u00e1rio informar a efici\u00eancia do combust\u00edvel
+required.distance = \u00c9 necess\u00e1rio informar a dist\u00e2ncia
+required.price = \u00c9 necess\u00e1rio informar o pre\u00e7o
 # Help and version
 help = Mostrar esta mensagem
 version = Mostrar a vers\u00e3o
 # Usage
 # Leading whitespace is removed by default.
 # Start with \u0020 to keep the leading whitespace.
-usage.header = Determinar o custo da viagem com base na efici\u00eancia do combust\u00edvel.%n
+usage.header = Calcular o custo da viagem com base na efici\u00eancia do combust\u00edvel.%n
 #usage.descriptionHeading
 usage.description = Calcula o custo estimado da viagem com base na efici\u00eancia do combust\u00edvel, no pre\u00e7o do combust\u00edvel e na dist\u00e2ncia da viagem.%n
-usage.description.0 = Pode guardar os dados de custo e de efici\u00eancia do combust\u00edvel para utiliza\u00e7\u00e3o futura.%n
-usage.synopsisHeading = Utiliza\u00e7\u00e3o:%n\u0020
+usage.description.0 = Voc\u00ea pode salvar os dados de custo e efici\u00eancia do combust\u00edvel para uso futuro.%n
+usage.synopsisHeading = Uso:%n\u0020
 #usage.customSynopsis
 usage.parameterListHeading = Par\u00e2metros:%n
 usage.optionListHeading = %nOp\u00e7\u00f5es:%n
